--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "calendar-app",
   "version": "0.1.0",
   "private": true,
+  "main": "src/electron-starter.js",
   "dependencies": {
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
@@ -11,7 +12,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "electron-dev": "set ELECTRON_START_URL=http://localhost:3000 && electron .",
+    "electron": "electron .",
+    "dev": "nf start"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -21,5 +25,10 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "electron": "^4.0.1",
+    "foreman": "^3.0.1"
+  },
+  "homepage": "./"
 }
