make some changes in electron window

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "main": "src/electron-starter.js",
   "dependencies": {
+    "electron-titlebar-windows": "^3.0.0",
     "normalize.css": "^8.0.1",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
