--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "main": "src/electron-starter.js",
   "dependencies": {
+    "bootstrap": "^4.2.1",
     "electron-titlebar-windows": "^3.0.0",
+    "node-sass": "^4.11.0",
     "normalize.css": "^8.0.1",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
