--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "calendar-app",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
-  "main": "src/electron-starter.js",
+  "main": "src/index.js",
   "dependencies": {
     "bootstrap": "^4.2.1",
-    "electron-titlebar-windows": "^3.0.0",
     "node-sass": "^4.11.0",
     "normalize.css": "^8.0.1",
     "react": "^16.7.0",
@@ -19,10 +18,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "electron-dev": "set ELECTRON_START_URL=http://localhost:3000 && electron .",
-    "electron": "electron .",
-    "dev": "nf start"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -34,9 +30,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "@fortawesome/fontawesome-free": "^5.6.3",
-    "electron": "^4.0.1",
-    "foreman": "^3.0.1"
+    "@fortawesome/fontawesome-free": "^5.6.3"
   },
   "homepage": "./"
 }
