--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "main": "src/index.js",
   "dependencies": {
+    "@emotion/core": "^10.0.7",
+    "@emotion/styled": "^10.0.7",
     "bootstrap": "^4.2.1",
     "node-sass": "^4.11.0",
     "normalize.css": "^8.0.1",
