--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "calendar-app",
   "version": "0.2.0",
   "private": true,
-  "main": "src/index.js",
+  "main": "src/electron.js",
   "dependencies": {
     "@emotion/core": "^10.0.7",
     "@emotion/styled": "^10.0.7",
@@ -21,7 +21,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "electron": "electron ."
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -34,6 +35,7 @@
   ],
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^5.6.3",
+    "electron": "^4.1.4",
     "eslint-config-prettier": "^4.0.0",
     "eslint-plugin-prettier": "^3.0.1",
     "prettier": "^1.16.4"
