--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,25 +1,9 @@
 {
-    "env": {
-        "browser": true,
-        "es6": true
-    },
     "extends": [
-        "plugin:react/recommended",
+        "react-app",
         "plugin:prettier/recommended"
     ],
-    "globals": {
-        "Atomics": "readonly",
-        "SharedArrayBuffer": "readonly"
-    },
-    "parserOptions": {
-        "ecmaFeatures": {
-            "jsx": true
-        },
-        "ecmaVersion": 2018,
-        "sourceType": "module"
-    },
     "plugins": [
-        "react",
         "prettier"
     ],
     "rules": {
