--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@emotion/core": "^10.0.10",
     "@emotion/styled": "^10.0.7",
     "bootstrap": "^4.2.1",
+    "emotion-theming": "^10.0.10",
     "node-sass": "^4.11.0",
     "normalize.css": "^8.0.1",
     "prop-types": "^15.7.2",
@@ -36,10 +37,8 @@
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^5.6.3",
     "electron": "^4.1.4",
-    "eslint": "^5.16.0",
     "eslint-config-prettier": "^4.0.0",
     "eslint-plugin-prettier": "^3.0.1",
-    "eslint-plugin-react": "^7.12.4",
     "prettier": "^1.16.4"
   },
   "homepage": "./"
