--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^5.6.3",
     "electron": "^4.1.4",
+    "electron-devtools-installer": "^2.2.4",
     "eslint-config-prettier": "^4.0.0",
     "eslint-plugin-prettier": "^3.0.1",
     "prettier": "^1.16.4"
